changes in the project