@@ -1,4 +1,4 @@
-package com.ntc.backend.config;
+package com.ntc.backend.security;
 
 import com.ntc.backend.security.CustomUserDetailsService;
 import com.ntc.backend.security.JwtAuthenticationFilter;
@@ -39,61 +39,123 @@ public class SecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+
+        configuration.setAllowedOrigins(
+                List.of("http://localhost:5173", "http://localhost")
+        );
+
+        configuration.setAllowedMethods(
+                Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")
+        );
+
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
     // ---------- NEW: no-cache filter ----------
     @Bean
     public FilterRegistrationBean<OncePerRequestFilter> noCacheFilter() {
+
         OncePerRequestFilter filter = new OncePerRequestFilter() {
+
             @Override
             protected void doFilterInternal(
                     jakarta.servlet.http.HttpServletRequest req,
                     jakarta.servlet.http.HttpServletResponse res,
                     jakarta.servlet.FilterChain chain)
                     throws jakarta.servlet.ServletException, java.io.IOException {
-                res.setHeader("Cache-Control", "no-store, no-cache, must-revalidate, max-age=0");
+
+                res.setHeader(
+                        "Cache-Control",
+                        "no-store, no-cache, must-revalidate, max-age=0"
+                );
+
                 res.setHeader("Pragma", "no-cache");
                 res.setHeader("Expires", "0");
+
                 chain.doFilter(req, res);
             }
         };
-        FilterRegistrationBean<OncePerRequestFilter> bean = new FilterRegistrationBean<>(filter);
+
+        FilterRegistrationBean<OncePerRequestFilter> bean =
+                new FilterRegistrationBean<>(filter);
+
         bean.addUrlPatterns("/api/*");
+
         return bean;
     }
     // -----------------------------------------
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(auth -> auth
-                        .requestMatchers("/api/health", "/api/login", "/api/admin/login",
-                                "/api/staff/reset-password", "/api/password-reset").permitAll()
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
-                        .requestMatchers("/api/staff/**").hasAnyRole("STAFF", "SECTION_HEAD", "DEPARTMENT_HEAD")
-                        .requestMatchers("/api/section-head/**").hasRole("SECTION_HEAD")
-                        .requestMatchers("/api/department-head/**").hasRole("DEPARTMENT_HEAD")
-                        .anyRequest().authenticated()
+                .cors(cors ->
+                        cors.configurationSource(corsConfigurationSource())
                 )
-                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
+                .csrf(csrf ->
+                        csrf.disable()
+                )
+
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(
+                                SessionCreationPolicy.STATELESS
+                        )
+                )
+
+                .authorizeHttpRequests(auth ->
+                        auth
+                                .requestMatchers(
+                                        "/api/health",
+                                        "/api/login",
+                                        "/api/admin/login",
+                                        "/api/staff/reset-password",
+                                        "/api/password-reset"
+                                )
+                                .permitAll()
+
+                                .requestMatchers("/api/admin/**")
+                                .hasRole("ADMIN")
+
+                                .requestMatchers("/api/staff/**")
+                                .hasAnyRole(
+                                        "STAFF",
+                                        "SECTION_HEAD",
+                                        "DEPARTMENT_HEAD"
+                                )
+
+                                .requestMatchers("/api/section-head/**")
+                                .hasRole("SECTION_HEAD")
+
+                                .requestMatchers("/api/department-head/**")
+                                .hasRole("DEPARTMENT_HEAD")
+
+                                .anyRequest()
+                                .authenticated()
+                )
+
+                .addFilterBefore(
+                        jwtFilter,
+                        UsernamePasswordAuthenticationFilter.class
+                );
 
         return http.build();
     }
 }
+
